# seedbot-cli

./: ASSIST_MODE.md  README.md  install.sh  pyproject.toml  readme.md
seedcode/: __init__.py  __main__.py  app.py  cli.py
seedcode/commands/: __init__.py  agent.py  assist.py  desktop.py  doctor.py  help.py  history.py  palette.py  provider.py  theme.py
seedcode/computer/: __init__.py  browser.py  catalog.py  controller.py  dispatcher.py  engine.py  keyboard.py  logbook.py  mouse.py  permissions.py  recovery.py  registry.py  resolver.py  screen.py  skills.py  state.py  verifier.py  vision.py  windows.py
seedcode/config/: __init__.py  defaults.py  manager.py
seedcode/core/: __init__.py  agent.py  chat.py  identity.py  models.py  project.py
seedcode/core/providers/: __init__.py  aerolink.py  base.py  freemodel.py  ollama.py  openrouter.py
seedcode/memory/: __init__.py  manager.py
seedcode/tools/: __init__.py  base.py  desktop.py  filesystem.py  git.py  patch.py  permissions.py  search.py  terminal.py  textio.py
seedcode/ui/: __init__.py  badges.py  dashboard.py  dialog.py  fuzzy.py  layout.py  menu.py  palette.py  progress.py  prompts.py  searchbox.py  selector.py  statusbar.py  textbox.py  theme.py  tree.py
tests/: test_action_gate.py  test_agent.py  test_agent_upgrade.py  test_app.py  test_client.py  test_computer.py  test_config.py  test_config_io.py  test_dashboard.py  test_desktop_commands.py  test_desktop_tools.py  test_dispatcher.py  test_identity.py  test_permission_level.py  test_providers_tools.py  test_resolver.py  test_skills.py  test_tool_verification.py  test_tools.py  test_verifier_recovery.py
