[build-system]
# hatchling >= 1.27 is needed for PEP 639 license expressions (license = "MIT").
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "seedcode-cli"
version = "1.3.0"
description = "Seed Code — a premium terminal-based AI coding assistant. Plant ideas. Grow code."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Al Shahriar Sowan" }]
keywords = ["ai", "cli", "terminal", "chat", "coding-assistant", "seedcode", "ollama", "agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "openai>=1.40.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]
# Computer Engine (desktop control) — Windows only in this release.
desktop = [
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "pygetwindow>=0.0.9",
    "uiautomation>=2.0.18; sys_platform == 'win32'",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/Alshahriar-07/seedcode-cli"
Repository = "https://github.com/Alshahriar-07/seedcode-cli"
Documentation = "https://github.com/Alshahriar-07/seedcode-cli#readme"
Issues = "https://github.com/Alshahriar-07/seedcode-cli/issues"

[project.scripts]
seedcode = "seedcode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["seedcode"]

[tool.hatch.build.targets.sdist]
include = ["seedcode", "README.md", "LICENSE"]
